--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,29 @@
 h1 {
 	margin: 20px 0;
 }
+.card-wrapper {
+	margin-bottom: 3em; 
+	margin-right: 2em;
+}
+
+.card {
+	height: 25em;
+	max-width: 20em;
+}
+
+.card-img-top {
+    height: 15em;
+}
+
+.view {
+    background-color: dimgrey;
+}
+
+.card-title .card-text {
+    color:rgb(78, 76, 76);
+}
+
+* {
+    font-family: sans-serif;
+}
+
