--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,21 @@
 <div class="container">
   <h1>Sharp Coding Challenge</h1>
-  <p class="lead">
-    Please refer to the README.md file for instructions.
-  </p>
-
-  <p>The starting point for your solution is provided below:</p>
-
 
   <!-- Your family practice doctor list -->
   <h2>Family Practice Doctors</h2>
   <ng-template ngFor let-doctor [ngForOf]="familyPracticeDoctors">
-    <div>
-      <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" alt="Please replace with a meaningful alt">
-      <div>
-        <h5>Dr. {{doctor.name}}</h5>
-        <h6>{{doctor.specialty}}</h6>
-        <a href="#" class="card-link">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
+    <div class="container">
+      <div class="row">
+        <div class="card card-wrapper border-secondary">
+          <div class="view">
+            <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" class="card-img-top" alt="Sorry, no image available.">
+          </div>
+          <div class="card-body card-body-cascade text-center">
+            <h5 class="card-title">Dr. {{doctor.name}}</h5>
+            <h6 class="card-text">{{doctor.specialty}}</h6>
+            <a href="#" class="card-link">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
+          </div>
+        </div>
       </div>
     </div>
   </ng-template>
@@ -23,12 +23,18 @@
   <!-- Your pediatric doctor list -->
   <h2>Pediatrics Doctors</h2>
   <ng-template ngFor let-doctor [ngForOf]="pediatricDoctors">
-    <div>
-      <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" alt="Please replace with a meaningful alt">
-      <div>
-        <h5>Dr. {{doctor.name}}</h5>
-        <h6>{{doctor.specialty}}</h6>
-        <a href="#">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
+    <div class="container">
+      <div class="row">
+        <div class="card card-wrapper border-secondary">
+          <div class="view view-cascade">
+            <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" class="card-img-top" alt="Sorry, no image available.">
+          </div>
+          <div class="card-body card-body-cascade text-center">
+            <h5 class="card-title">Dr. {{doctor.name}}</h5>
+            <h6 class="card-text">{{doctor.specialty}}</h6>
+            <a href="#" class="card-link">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
+          </div>
+        </div>
       </div>
     </div>
   </ng-template>
