--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,29 +1,20 @@
-h1 {
-	margin: 20px 0;
-}
-.card-wrapper {
-	margin-bottom: 3em; 
-	margin-right: 2em;
-}
-
-.card {
-	height: 25em;
-	max-width: 20em;
-}
-
-.card-img-top {
-    height: 15em;
-}
-
-.view {
+ .card-img-top {
     background-color: dimgrey;
-}
+} 
 
 .card-title .card-text {
-    color:rgb(78, 76, 76);
-}
+	color:rgb(78, 76, 76);
+	 padding-top: 20px;
+ } 
 
-* {
-    font-family: sans-serif;
-}
+  .card {
+	width: 15rem;
+	display:inline-block;
+	padding: 1em;
+	margin: auto;
+	text-align: center; 
+  }
 
+  .container {
+	  margin-bottom: 5em;
+  }
