--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,37 @@
 <div class="container">
-  <h1>Sharp Coding Challenge</h1>
-
-  <!-- Your family practice doctor list -->
-  <h2>Family Practice Doctors</h2>
-  <ng-template ngFor let-doctor [ngForOf]="familyPracticeDoctors">
-    <div class="container">
-      <div class="row">
-        <div class="card card-wrapper border-secondary">
-          <div class="view">
-            <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" class="card-img-top" alt="Sorry, no image available.">
-          </div>
-          <div class="card-body card-body-cascade text-center">
-            <h5 class="card-title">Dr. {{doctor.name}}</h5>
-            <h6 class="card-text">{{doctor.specialty}}</h6>
+  <h2>Family Practice Doctors</h2>      
+  <div class="card-deck"> 
+    <ng-template ngFor let-doctor [ngForOf]="familyPracticeDoctors">
+      <div class="col-lg-4 col-sm-6 py-3 ">
+        <div class="card border-secondary h-100">
+          <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" class="card-img-top" alt="Sorry, no image available.">
+          <div class="card-body">
+            <h4 class="card-title">Dr. {{doctor.name}}</h4>
+            <h6 class="card-subtitle">Family Practice</h6>
+            <p class="card-text">{{doctor.gender | titlecase}}</p>
             <a href="#" class="card-link">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
           </div>
         </div>
       </div>
-    </div>
-  </ng-template>
+    </ng-template>
+  </div>
+</div>
 
-  <!-- Your pediatric doctor list -->
-  <h2>Pediatrics Doctors</h2>
-  <ng-template ngFor let-doctor [ngForOf]="pediatricDoctors">
-    <div class="container">
-      <div class="row">
-        <div class="card card-wrapper border-secondary">
-          <div class="view view-cascade">
+<div class="container">
+    <h2>Pediatric Doctors</h2>      
+    <div class="card-deck"> 
+      <ng-template ngFor let-doctor [ngForOf]="pediatricDoctors">
+        <div class="col-lg-4 col-sm-6 py-3 ">
+          <div class="card border-secondary h-100">
             <img src="https://avatars.dicebear.com/v2/{{doctor.gender}}/{{doctor.name || 'noname'}}.svg" class="card-img-top" alt="Sorry, no image available.">
-          </div>
-          <div class="card-body card-body-cascade text-center">
-            <h5 class="card-title">Dr. {{doctor.name}}</h5>
-            <h6 class="card-text">{{doctor.specialty}}</h6>
+          <div class="card-body">
+            <h4 class="card-title">Dr. {{doctor.name}}</h4>
+            <h6 class="card-subtitle">Pediatrics</h6>
+            <p class="card-text">{{doctor.gender | titlecase}}</p>
             <a href="#" class="card-link">Reviews <span class="badge badge-primary">{{doctor.reviewCount}}</span></a>
           </div>
         </div>
       </div>
-    </div>
-  </ng-template>
+    </ng-template> 
+  </div>
 </div>
