Fixes existing tests and adds new app tests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<h1>Sharp Code Challenge</h1>
+
 <div class="container">
-  <h2>Family Practice Doctors</h2>      
+  <h2 class="family-list">Family Practice Doctors</h2>      
   <div class="card-deck"> 
     <ng-template ngFor let-doctor [ngForOf]="familyPracticeDoctors">
       <div class="col-lg-4 col-sm-6 py-3 ">
@@ -18,7 +20,7 @@
 </div>
 
 <div class="container">
-    <h2>Pediatric Doctors</h2>      
+    <h2 class="pediatric-list">Pediatric Doctors</h2>      
     <div class="card-deck"> 
       <ng-template ngFor let-doctor [ngForOf]="pediatricDoctors">
         <div class="col-lg-4 col-sm-6 py-3 ">
